# life-simulator

./: .auto-claude-status  .claude_settings.json  .gitignore  ACTION_INTERRUPTION_FIX_INDEX.md  ACTION_PATHFINDING_QUICK_REF.md  AGENT2_IMPLEMENTATION_SUMMARY.md  ANIMAL_SPAWN_VERIFICATION.md  BATCH_PROCESSING_IMPLEMENTATION.md  BEVY_HIERARCHY_MIGRATION_STATUS.md  BEVY_WORLD_CONFLICT_FIX.md  CACHED_STATE_INTEGRATION.md  CHANGE_DETECTION_DELIVERY.md  CHANGE_DETECTION_IMPLEMENTATION.md  CHANGE_DETECTION_QUICK_REFERENCE.md  CHANGE_DETECTION_STATS_MATE_DELIVERY.md  CHILDREN_QUERY_QUICK_REFERENCE.md  CLAUDE.md  CLEANUP_DETAILS.md  COMPLETION_SUMMARY.md  CRITICAL_BUG_FIX_LOG.md  Cargo.toml  Cargo.toml.bak3  Cargo.toml.bak4  Cargo.toml.bak5  DEER_HERD_ACTIVATION_DELIVERY.md  DEER_HERD_QUICK_REFERENCE.md  DELIVERY_NOTES.md  DELIVERY_SUMMARY.md  E2E_VERIFICATION_GUIDE.md  ECOSYSTEM_BALANCE_RESULTS.md  ECS_ANTI_PATTERN_ELIMINATION.md  ECS_IMPROVEMENT_ALL_PHASES_COMPLETE.md  ECS_IMPROVEMENT_COMPLETE.md  ECS_IMPROVEMENT_ROADMAP.md  ECS_IMPROVEMENT_ULTRATHINK.md  ENTITY_STRESS_TEST_REPORT.md  ENTITY_TRACKER_FIX_SUMMARY.md  ENTITY_VISUALIZATION_QUICKSTART.md  FEAR_INTEGRATION_QUICK_REFERENCE.md  FINAL_VALIDATION_SUMMARY.txt  (+211 more)
.claude/: context.md  phase2_spatial_tasks.md  settings.json
.claude-collective/: agents.md  package-lock.json
.taskmaster/: config.json  state.json
config/: spawn_config.ron  spawn_config.ron.backup-150animals  spawn_config_500_test.ron  spawn_config_load_test.ron  spawn_config_one_rabbit.ron  spawn_config_stress_100.ron  spawn_config_stress_300.ron  spawn_config_stress_700.ron  spawn_config_stress_test.ron  spawn_config_test_single.ron  spawn_test_one_rabbit.ron
docs/: ADR-001-vegetation-storage.md  API_REFERENCE.md  BEHAVIOR_VERIFICATION_GUIDE.md  BEVY_SYSTEM_PARAMS_GUIDE.md  DEBUG_API.md  DEVELOPMENT_GUIDE.md  ENTITY_MOVEMENT_EXPLAINED.md  ENTITY_VISUALIZATION.md  README.md  (+38 more)
tools/debug/sim-logparse/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  README.md  USAGE_GUIDE.md  run.sh
tools/debug/sim-logparse/src/: anomaly.rs  cli.rs  main.rs  output.rs  parser.rs
tools/debug/sim-monitor/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TEST_REPORT.md
tools/debug/sim-monitor/src/: api_client.rs  app.rs  app.rs.bak  lib.rs  main.rs  ui.rs
tools/debug/sim-monitor/src/widgets/: alerts.rs  entities.rs  header.rs  health.rs  mod.rs
tools/debug/sim-monitor/tests/: integration_test.rs
tools/debug/sim-profile/: ARCHITECTURE.md  Cargo.toml  EXAMPLES.md  README.md  test_regex.rs
tools/debug/sim-profile/src/: main.rs
tools/debug/sim-trace/: Cargo.toml  IMPLEMENTATION.md  QUICK_START.md  README.md
tools/debug/sim-trace/src/: cli.rs  entities.rs  lib.rs  main.rs  output.rs  parser.rs
(+523 files in other folders)
