[package]
name = "life-simulator"
version = "0.1.0"
edition = "2021"
description = "A life simulator game built with Bevy 0.16"
authors = ["Jean"]
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "multi_threaded",
  "serialize",
  "bevy_log",
] }
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"

[dev-dependencies]
bevy = { version = "0.16", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
