[package]
name = "sim-logparse"
version = "0.1.0"
edition = "2021"
description = "Log parser CLI for analyzing Life Simulator performance metrics and anomalies"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "sim-logparse"
path = "src/main.rs"
