[package]
name = "sim-monitor"
version = "0.1.0"
edition = "2021"
description = "Real-time TUI dashboard for monitoring Life Simulator"
authors = ["Jean"]
license = "MIT OR Apache-2.0"

[lib]
name = "sim_monitor"
path = "src/lib.rs"

[[bin]]
name = "sim-monitor"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
mockito = "1.5"
tokio-test = "0.4"
