[package]
name = "sim-profile"
version = "0.1.0"
edition = "2021"
description = "Performance analysis tool for life-simulator TickProfiler output"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[dev-dependencies]
