[package]
name = "sim-trace"
version = "0.1.0"
edition = "2021"
description = "Entity behavior analyzer CLI for Life Simulator - tracks movement, actions, and anomalies"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "sim_trace"
path = "src/lib.rs"

[[bin]]
name = "sim-trace"
path = "src/main.rs"
